fix(ui-overlays): prevent ModalBody focus when scrollable
refs: INSTUI-758

Firefox allows elements with overflowing content to receive
focus which was creating issues with focus management in
Modals. This change prevents that bevahior in FF so all
modals will work consistently in all browsers.

TEST PLAN:
- Create a modal with scrolling content
- Verify that the modal traps focus as expected in all
browsers
- Ensure clicking in the modal content doesn't display a
focus outline in any browser
- There should be no regressions to Modal
- Unit tests should pass

Reviewed-on: https://gerrit.instructure.com/176627
Tested-by: Jenkins
Product-Review: Jennifer Stern <jstern@instructure.com>
QA-Review: Daniel Sasaki <dsasaki@instructure.com>

--- a/packages/ui-overlays/src/components/Modal/ModalBody/styles.css
+++ b/packages/ui-overlays/src/components/Modal/ModalBody/styles.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
   overflow-y: auto;
   flex: 1 1 auto;
+
+  &:focus {
+    outline: none;
+  }
 }
 
 .content {
